# tish

./: Cargo.toml  README.md  tish.toml
src/: command.rs  effect.rs  issue.rs  lib.rs  main.rs  project.rs  ticket.rs
tish/: config.toml
